--- a/src/app/components/user.component.html
+++ b/src/app/components/user.component.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<h1>{{name}}</h1>
+<p>Email: <strong>{{email}}</strong></p>
+<p>{{address.street}} {{address.city}}, {{address.state}}</p>
+<button (click)="toggleHobbies()">{{showHobbies ? 'Hide Hobbies' : 'Show Hobbies'}}</button>
+<div *ngIf="showHobbies">
+    <h3>Hobbies</h3>
+    <ul>
+        <li *ngFor="let hobby of hobbies; let i=index">{{hobby}} <button (click)="deleteHobby(i)">X</button></li>
+    </ul>
+    <form (submit)="addHobby(hobby.value)">
+        <label>Add hobby: </label><br>
+        <input type="text" #hobby /><br>
+    </form>
+</div>
+<hr>
+<h3>Edit User info</h3>
+<form>
+    <label>Name: </label><br>
+    <input type="text" name="name" [(ngModel)]="name" /><br>
+    <label>Email: </label><br>
+    <input type="text" name="email" [(ngModel)]="email" /><br>
+    <label>Street: </label><br>
+    <input type="text" name="address.street" [(ngModel)]="address.street" /><br>
+    <label>City: </label><br>
+    <input type="text" name="address.city" [(ngModel)]="address.city" /><br>
+    <label>State: </label><br>
+    <input type="text" name="address.state" [(ngModel)]="address.state" /><br>
+</form>
 
-</body>
-</html>
+<hr>
+<h3>Posts</h3>
+<div *ngFor="let post of posts">
+    <h5>{{post.title}}</h5>
+    <p>{{post.body}}</p>
+</div>
